--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,10 @@
     border-radius: 50px;
     height: 80px;
     margin-bottom: 10px;
+    font-size: 40px;
+    text-align: right;
+    padding-right: 15px;
+    line-height: 80px;
 }
 
 .button-box {
